--- a/SPA/public/index.html
+++ b/SPA/public/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <!-- Do not forget to change the path to the css file -->
     <title></title>
-    <link href="../public/static/css/style.css" type="text/css" rel="stylesheet">
+    <!-- <link href="./public/static/css/style.css" type="text/css" rel="stylesheet"> -->
   </head>
   <body>
 
