add a comfirm modal when logout

--- a/SPA/public/index.html
+++ b/SPA/public/index.html
@@ -16,10 +16,8 @@
     <!-- <link href="./public/static/css/style.css" type="text/css" rel="stylesheet"> -->
   </head>
   <body>
-
-    <div id="root">
-
-    </div>
+<div id="overlays"></div>
+    <div id="root"></div>
    
   </body>
 </html>
